﻿$Rev$
[2007/08/22]
Editor.py           Add Shift+Delete => Cut, Shift+Insert => Paste
[2007/08/21]
mako_plugin         Add mako template syntax highlight support

-------------------------------------- 3.7 -----------------------------
[2007/08/19]
                    Ready to release new version
                    
[2007/08/09]
mRegister.py        Fix register to explore bug

[2007/08/08]
                    Fix document NewEdit->UliPad
mFormat.py          Add Tab and Shift+Tab to menu item
winpdb module       Merge new 1.20 version into ulipad
                    
[2007/08/07]
mRecentFile.py      增加Alt+R给最近打开文件菜单

[2007/07/19]
DirBrowser.py       修正在文件浏览中无法使用光标键的bug

[2007/07/11]
mFtp.py             允许Ftp窗口在相应的面板打开，当通过面板右键菜单打开时

[2007/07/09]
RegexWindow.py      增加findall中正则式返回为tuple的list时的显示处理,对于tuple使用\t进行分割

[2007/06/25]
batchrenamefilenames_plugin
                    增加批量改名插件
                    
[2007/06/24]
mako_plugin mCommands.py
                    增加mako插件，将ESC键自动进入vim模式改为原来的处理方式。
                    
[2007/06/12]
mLexer.py           增加Lua语法设置

[2007/05/15]
                    增加繁体中文翻译文件 感谢：趙惟倫 <chaoweilun@gmail.com>
                    
[2007/05/10]
InputAssistant.py mInputassistant.py Editor.py
                    完善自动完成列表处理。可以响应EVT_STC_AUTOCOMP_SELECTION
                    事件。同时增加在acp中定义\b表示unindent功能。同时去掉{##}
                    的处理
                    解决多行文本添加时缩近的处理
SnipMixin.py InputAssistant.py mInputassistant.py
                    增加自动片段域定义及跳转功能
                    
[2007/05/08]
tts_plugin          将pytts改名为tts_plugin，同时允许修改角色

[2007/04/21]
mReloadMixins.py    修正Ctrl+H快捷键冲突的bug，改为Ctrl+M，同时去掉字符复制功能
dict4ini.py         fix 单引号bug

[2007/04/20]
dict4ini.py         增加对BOM的识别

[2007/04/19]
dict4ini.py         Fix '\' escape
mLexerFactory.py    Fix lexer highlight bug
DirBrowser.py       Fix dir sort bug

[2007/04/18]
mDebug.py *         将winpdb作为核心的一部分
DirBrowser.py LexerFactory.py
                    修改文件名时自动切换语法高亮